--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,10 +13,13 @@
         android:layout_height="290dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="65dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="8dp"
         android:indeterminateDrawable="@drawable/score_bar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -25,16 +28,20 @@
         android:layout_height="60dp"
         android:layout_below="@+id/btn_previousFeedback"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="83dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="468dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/custombutton_shape"
         android:text="@string/btn_go"
         android:textColor="#192943"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.179" />
 
     <Button
         android:id="@+id/btn_previousFeedback"
@@ -43,19 +50,16 @@
         android:layout_below="@+id/progressBar"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="83dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="396dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/custombutton_shape"
         android:text="@string/btn_check_feedbacks"
         android:textColor="#192943"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_record"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.939" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txt_score"
@@ -63,13 +67,13 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/progressBar"
         android:layout_alignEnd="@+id/progressBar"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="92dp"
         android:layout_marginEnd="100dp"
         android:text="@string/score"
         android:textColor="@android:color/background_light"
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="@+id/progressBar"
-        app:layout_constraintHorizontal_bias="0.636"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/progressBar" />
 
@@ -79,13 +83,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_score"
         android:layout_alignEnd="@+id/progressBar"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="102dp"
         android:text="@string/rating"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="@+id/txt_score"
-        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/txt_score"
         app:layout_constraintTop_toBottomOf="@+id/txt_score" />
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
